@startuml
title Diagramme de Classes - API Gestionnaire de Tâches

package "Modèles" #FFFDE7 {
    class User {
        -int id
        -string name
        -string email
        -Date createdAt
        +constructor(id, name, email)
        +validate() : boolean
        +toJSON() : Object
    }

    class Task {
        -int id
        -string title
        -string description
        -int userId
        -string status
        -Date createdAt
        -Date updatedAt
        +constructor(id, title, description, userId, status)
        +validate() : boolean
        +updateStatus(newStatus) : boolean
        +toJSON() : Object
    }
}

package "Contrôleurs" #E3F2FD {
    class UserController {
        -User[] users
        -int nextId
        +getAllUsers(req, res) : void
        +getUserById(req, res) : void
        +createUser(req, res) : void
        +updateUser(req, res) : void
        +deleteUser(req, res) : void
    }

    class TaskController {
        -Task[] tasks
        -int nextId
        +getAllTasks(req, res) : void
        +getTaskById(req, res) : void
        +createTask(req, res) : void
        +updateTask(req, res) : void
        +deleteTask(req, res) : void
    }
}

package "Routes" #E8F5E9 {
    class UserRouter <<Express.Router>> {
        +GET    /api/users
        +GET    /api/users/:id
        +POST   /api/users        [validate(userSchema)]
        +PUT    /api/users/:id     [validate(userUpdateSchema)]
        +DELETE /api/users/:id
    }

    class TaskRouter <<Express.Router>> {
        +GET    /api/tasks
        +GET    /api/tasks?userId=  [filtre par utilisateur]
        +GET    /api/tasks/:id
        +POST   /api/tasks         [validate(taskSchema)]
        +PUT    /api/tasks/:id      [validate(taskUpdateSchema)]
        +DELETE /api/tasks/:id
    }
}

package "Validation" #FFF3E0 {
    class UserValidator {
        +userSchema : Joi.ObjectSchema
        +userUpdateSchema : Joi.ObjectSchema
    }

    class TaskValidator {
        +taskSchema : Joi.ObjectSchema
        +taskUpdateSchema : Joi.ObjectSchema
    }

    class Validator {
        +validate(schema) : Function
    }
}

note bottom of User
  AC-1 : Attributs déclarés
  id, name, email, createdAt
  (class fields ES2022)
end note

note bottom of UserRouter
  POST et PUT passent par
  le middleware validate()
  avant d'atteindre le contrôleur
end note

note bottom of TaskRouter
  POST et PUT passent par
  le middleware validate()
  GET accepte ?userId= pour filtrer
end note

note bottom of UserValidator
  userSchema :
  - name: string (2-100 chars, requis)
  - email: format email valide (requis)
  userUpdateSchema :
  - name/email optionnels, min 1 champ
end note

note bottom of TaskValidator
  taskSchema :
  - title: string (1-200 chars, requis)
  - description: string (max 1000, optionnel)
  - userId: entier positif (requis)
  - status: pending|in-progress|completed
  taskUpdateSchema :
  - title/description/status optionnels, min 1
end note

note bottom of Validator
  Middleware Express générique
  abortEarly: false, stripUnknown: true
  Retourne 400 + détails des erreurs
end note

User "1" *-- "*" Task : possède  >\nFK: Task.userId → User.id
UserController "1" -- "*" User : gère
TaskController "1" -- "*" Task : gère
UserRouter --> UserController : délègue
TaskRouter --> TaskController : délègue
UserRouter ..> Validator : POST, PUT
TaskRouter ..> Validator : POST, PUT
Validator ..> UserValidator : utilise schémas
Validator ..> TaskValidator : utilise schémas
UserValidator --> User : valide
TaskValidator --> Task : valide
@enduml
